# freeRTOS-pico

./: .gitignore  CMakeLists.txt  README.md  free_rtos_import.cmake
config/: FreeRTOSConfig.h
src/: CMakeLists.txt
